--- a/adventure-engine.cabal
+++ b/adventure-engine.cabal
@@ -4,7 +4,7 @@ cabal-version: 2.2
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: d01e0e5eacd32aff7a657f050e30ba21cc2b6de6c2f7036c51d99c8ee057b71b
+-- hash: 579e912e4a3268d4fc7a6f16559b720fc2d3ae5fd7d746806cf0736391e2884b
 
 name:           adventure-engine
 version:        0.1.0.0
@@ -37,6 +37,7 @@ library
       base >=4.7 && <5
     , containers
     , haskeline
+    , mtl
     , text
   default-language: Haskell2010
 
