--- a/adventure-engine.cabal
+++ b/adventure-engine.cabal
@@ -1,10 +1,10 @@
 cabal-version: 2.2
 
--- This file has been generated from package.yaml by hpack version 0.33.0.
+-- This file has been generated from package.yaml by hpack version 0.34.4.
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 579e912e4a3268d4fc7a6f16559b720fc2d3ae5fd7d746806cf0736391e2884b
+-- hash: 159bbd3564d909a81e0a3ddcdecf388affb9f122484c1a7d3d8ecb7efbdb814f
 
 name:           adventure-engine
 version:        0.1.0.0
@@ -37,6 +37,7 @@ library
       base >=4.7 && <5
     , containers
     , haskeline
+    , monomer
     , mtl
     , text
   default-language: Haskell2010
