--- a/package.yaml
+++ b/package.yaml
@@ -23,6 +23,9 @@ description:         Please see the README on GitHub at <https://github.com/agen
 dependencies:
 - base >= 4.7 && < 5
 
+default-extensions:
+- OverloadedStrings
+
 library:
   source-dirs: src
   dependencies:
