--- a/package.yaml
+++ b/package.yaml
@@ -58,6 +58,17 @@ executables:
     - adventure-engine
     - text
 
+  adventure-maker:
+    main: Main.hs
+    source-dirs: adventure-maker
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    dependencies:
+    - adventure-engine
+    - text
+
 tests:
   adventure-engine-test:
     main:                Spec.hs
